<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    android:background="@drawable/my_diary"
    android:elevation="24dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <ImageView
            android:id="@+id/imageIcon"
            android:layout_width="157dp"
            android:layout_height="111dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/list_image"
            android:scaleType="centerCrop" />

        <TextView
            android:id="@+id/listTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/imageIcon"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/listTitle"
            android:layout_toEndOf="@+id/imageIcon"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/date1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:layout_toEndOf="@+id/imageIcon"
            android:text="@string/date1"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/name1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="95dp"
            android:layout_toEndOf="@+id/imageIcon"
            android:text="@string/names"
            android:textSize="12sp" />

    </RelativeLayout>
</android.support.v7.widget.CardView>